scripts/nullaway/annotator/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8.txt
../annotator/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:49: error: [NullAway] initializer method does not guarantee @NonNull field rcgTrains (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SMThemePark(double t0time, double tftime, int nTrains, int nCars,
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:99: error: [NullAway] initializer method does not guarantee @NonNull fields rcgTrains (line 28), rvp (line 34) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SMThemePark() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/TravellingBetweenStations.java:38: error: [NullAway] dereferenced expression train is @Nullable
		train.status = Trains.StatusType.ARRIVED;
		     ^
    (see http://t.uber.com/nullaway )
3 errors
